modification by phth

--- a/_posts/2021-12-18-blabla.md
+++ b/_posts/2021-12-18-blabla.md
@@ -17,7 +17,8 @@ last_modified_at: 2021-09-23T16:00:52-04:00
 
 ---
 
-# Algorithm 1 $$\LaTeX$$
+# Algorithm 1 
+
+$$\LaTeX$$
 
 Just a sample algorithmn
-
