modification by phth

--- a/_posts/2022-04-11-notes-AGX.md
+++ b/_posts/2022-04-11-notes-AGX.md
@@ -1,17 +1,21 @@
 ---
-title: "Notes on CUDA"
+title: "Notes on Jetson Xavier AGX"
 read_time: false
 excerpt_separator: "<!--more-->"
 categories:
   - Notes
-  - CUDA
+  - AGX
 tags:
-  - cuda
+  - agx
   - notes
 toc: true
 toc_label: "Contents"
 
 ---
+
+# Jetpack
+
+- check Jetpack version: `sudo apt-cache show nvidia-jetpack`
 
 # SDK Manager
 
